# salvo-cms

./: .env.sample  .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/cms-auth/: Cargo.toml
crates/cms-auth/src/: lib.rs  main.rs
crates/cms-auth/src/domain/: mod.rs
crates/cms-auth/src/domain/dto/: jwt.rs  login.rs  login_store_dto.rs  mod.rs
crates/cms-auth/src/domain/entity/: login.rs  mod.rs  prelude.rs  user.rs
crates/cms-auth/src/domain/form/: login.rs  mod.rs  password_login_form.rs
crates/cms-auth/src/handler/: checker_handler.rs  login_handler.rs  mod.rs  route_handler.rs
crates/cms-auth/src/route/: checker.rs  login.rs  mod.rs  route.rs  token.rs
crates/cms-auth/src/service/: login.rs  login_service.rs  mod.rs
crates/cms-core/: Cargo.toml
crates/cms-core/src/: consts.rs  lib.rs
crates/cms-core/src/config/: app_state.rs  database.rs  database_config.rs  jwt.rs  jwt_config.rs  mod.rs  rabbitmq.rs  rabbitmq_config.rs  redis.rs  redis_config.rs  state.rs  web.rs  web_config.rs
crates/cms-core/src/consts/: enum_consts.rs  mod.rs
crates/cms-core/src/domain/: mod.rs  option.rs  response.rs  schemas.rs
crates/cms-core/src/domain/dto/: editor.rs  editor_current_dto.rs  field.rs  field_bool_update_dto.rs  field_value_unique_dto.rs  jwt.rs  jwt_claims_dto.rs  jwt_token_dto.rs  mod.rs  model.rs  model_logic_delete_dto.rs  model_relation_count_dto.rs  model_view_dto.rs
crates/cms-core/src/domain/entity/: certificate.rs  editor.rs  mod.rs  prelude.rs
crates/cms-core/src/domain/form/: field.rs  field_bool_update_form.rs  field_value_unique_form.rs  mod.rs  unique.rs
crates/cms-core/src/domain/model/: mod.rs  select_option_model.rs
crates/cms-core/src/domain/response/: app.rs  app_response.rs  base_response.rs  mod.rs  response_error.rs  response_success.rs
crates/cms-core/src/domain/vo/: editor.rs  editor_load_vo.rs  jwt.rs  jwt_login_vo.rs  mod.rs  paginate.rs  paginate_result_vo.rs
crates/cms-core/src/enums/: app_store_form.rs  editor_type.rs  editor_type_enum.rs  enable.rs  enable_enum.rs  error.rs  error_enum.rs  mod.rs  platform.rs  platform_enum.rs  primary_id_enum.rs  select_value_enum.rs  token_type.rs  token_type_enum.rs  view_mode.rs  view_mode_enum.rs
crates/cms-core/src/error/: app.rs  app_error.rs  mod.rs  traits.rs
crates/cms-core/src/fixture/config/: app.rs  mod.rs
crates/cms-core/src/fixture/model/: editors.rs  mod.rs
crates/cms-core/src/handler/: checker_handler.rs  mod.rs
crates/cms-core/src/middleware/: jwt.rs  jwt_middleware.rs  mod.rs
crates/cms-core/src/route/: checker.rs  mod.rs
crates/cms-core/src/service/: auth.rs  editor.rs  editor_service.rs  jwt.rs  jwt_service.rs  mod.rs  redis.rs  redis_service.rs
crates/cms-core/src/utils/: deserializer.rs  deserializer_utils.rs  editor.rs  editor_utils.rs  encrypt.rs  encrypt_utils.rs  mod.rs  parameter.rs  parameter_utils.rs  random.rs  random_utils.rs  time.rs  time_utils.rs  validate.rs  validate_utils.rs
crates/cms-mate/: Cargo.toml
crates/cms-mate/src/: lib.rs  main.rs
crates/cms-mate/src/console/: mod.rs  server.rs
crates/cms-mate/src/domain/: mod.rs
crates/cms-mate/src/enums/: MorphValue.rs  app_load_enum.rs  command.rs  item_load_enum.rs  kind_load_enum.rs  load.rs  mod.rs  morph.rs  morph_load_enum.rs  morph_value_enums.rs
crates/cms-mate/src/handler/: address_handler.rs  app_handler.rs  checker_handler.rs  item_handler.rs  kind_handler.rs  mod.rs  morph_handler.rs
crates/cms-mate/src/route/: address.rs  app.rs  checker.rs  item.rs  kind.rs  mod.rs  morph.rs
crates/cms-mate/src/service/: address.rs  app.rs  app_service.rs  item.rs  item_service.rs  kind.rs  kind_service.rs  mod.rs  module.rs  morph_service.rs
crates/cms-queue/: Cargo.toml
crates/cms-queue/src/: main.rs
crates/cms-queue/src/service/: mod.rs  rabbitmq.rs
crates/cms-server/: .env.sample  Cargo.toml
crates/cms-server/src/: main.rs  route.rs
crates/cms-user/: .env.sample  Cargo.toml
crates/cms-user/src/: lib.rs  main.rs
crates/cms-user/src/domain/: mod.rs
crates/cms-user/src/domain/dto/: detail.rs  detail_store_dto.rs  mod.rs  user.rs  user_query_dto.rs  user_store_dto.rs  user_update_password_dto.rs  user_view_dto.rs
crates/cms-user/src/domain/entity/: detail.rs  login.rs  mod.rs  prelude.rs  user.rs
crates/cms-user/src/domain/form/: detail.rs  detail_store_form.rs  mod.rs  user.rs  user_create_form.rs  user_update_form.rs  user_update_password_form.rs
crates/cms-user/src/domain/query/: mod.rs  user.rs
crates/cms-user/src/domain/vo/: detail.rs  mod.rs  user.rs  user_form_option_vo.rs  user_master_vo.rs
crates/cms-user/src/enums/: gender.rs  load.rs  mod.rs  user_type.rs
crates/cms-user/src/handler/: mod.rs  user_handler.rs
crates/cms-user/src/route/: checker.rs  mod.rs  user.rs
crates/cms-user/src/service/: user.rs  user_service.rs
entity/src/: auth_certificate.rs  auth_certificates.rs  category_item.rs  category_items.rs  lib.rs  mate_app.rs  mate_apps.rs  mate_item.rs  mate_items.rs  mate_kind.rs  mate_kinds.rs  mate_module.rs  mate_morph.rs  mate_morphes.rs  prelude.rs  user.rs  user_detail.rs  user_details.rs  user_login.rs  user_logins.rs  users.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20240806_013138_create_table_user.rs  m20240806_025749_create_table_auth_certificate.rs  m20240806_025755_create_table_user_login.rs  m20240806_025810_create_table_category_item.rs  m20240921_054735_create_table_user_detail.rs  m20250225_040901_create_table_mate_app.rs  m20250225_040901_create_table_mate_module.rs  m20250225_040906_create_table_mate_kind.rs  m20250225_040909_create_table_mate_item.rs  m20250225_040913_create_table_mate_morph.rs  m20250225_040913_create_table_mate_morphable.rs  m20250228_005123_add_count_columns_to_mate_table.rs
src/: main.rs  route.rs
src/config/: database.rs  mod.rs  web.rs
src/domain/dto/: mod.rs  user.rs
src/domain/vo/: app.rs  mod.rs
src/enums/: mod.rs  platform.rs
src/error/: app.rs  mod.rs
src/handler/: checker.rs  mod.rs  user.rs
src/utils/: validate.rs
(+69 files in other folders)
