[package]
name = "salvo-cms"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { version = "0", features = ["anyhow", "oapi"] }
tokio = { version = "1", features = ["macros"] }

# error handling
anyhow = "1"
thiserror = "2.0"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# env
dotenvy = "0.15"
envy = "0.4"