[package]
name = "salvo-cms"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "crates/*", "migration"]

[workspace.dependencies]
salvo = { version = "0", features = ["anyhow", "oapi", "affix-state", "serve-static"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# error handling
anyhow = "1"
thiserror = "2.0"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# env
dotenvy = "0.15"
envy = "0.4"

# database
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "debug-print", "with-chrono", "macros", "with-json", "with-uuid", "with-rust_decimal"] }
uuid = { version = "1.10", features = ["serde", "v4"] }

# validator
regex = { version = "1.11" }
validator = { version = "0.20", features = ["derive"] }