[package]
name = "cms-core"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { workspace = true }
tokio = { workspace = true }

# error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

# env
dotenvy = { workspace = true }
envy = { workspace = true }

# database
chrono = { workspace = true }
sea-orm = { workspace = true }
uuid = { workspace = true }

# validator
regex = { workspace = true }
validator = { workspace = true }

rand = { workspace = true }
md5 = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

# Redis
redis = { workspace = true }
redis-macros = { workspace = true }

num-traits = {workspace = true}