[package]
name = "cms-server"
version = "0.1.0"
edition = "2024"
default-run = "cms-server"

[[bin]]
name = "cms-server"
path = "src/main.rs"

[[bin]]
name = "cms-command"
path = "src/bin/command.rs"

[dependencies]
cms-auth = { version = "0.1.0", path = "../cms-auth" }
cms-core = { version = "0.1.0", path = "../cms-core" }
cms-user = { version = "0.1.0", path = "../cms-user" }
cms-mate = { version = "0.1.0", path = "../cms-mate" }

salvo = { workspace = true }
tokio = { workspace = true }

redis = { workspace = true }
redis-macros = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

# env
dotenvy = { workspace = true }
envy = { workspace = true }

# database
sea-orm = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

anyhow = { workspace = true }

# console
clap = { workspace = true }
deadpool-lapin = { workspace = true }